<resources>
    <string name="app_name">Interval Trainer</string>
    <string name="affinity">com.teddoll.fitness.intervaltrainer</string>
    <string name="action_about">About</string>
    <string name="title_activity_tracking">TrackingActivity</string>
    <string name="get_started">Lets get Started</string>
    <string name="session_complete">Session Complete</string>
    <string name="time_format">%1$d.%2$d</string>
    <string name="distance_format">Distance: %1$.2f</string>

    <string name="empty_sessions">You don\'t have any Sessions saved. Pressed the play button below to get started.</string>

    <string name="set_selection_title">Select</string>
    <string name="name_hint">Name your interval set</string>
    <string name="name_label">Name:</string>
    <string name="total_format">Total Time: %1$d minutes</string>
    <string name="minute_string_format">%1$s minutes</string>
    <string name="copy_title">copy</string>
    <string name="paste_title">paste</string>
    <string name="save_title">save</string>
    <string name="delete_title">delete</string>
    <string name="edit_title">Edit</string>
    <string name="add_title">Add</string>
    <string name="notification_started">Training started</string>
    <string name="notification_update">%1$d minute interval hit</string>
    <string name="notification_end">Training complete</string>
    <string name="item_time_format">"%1$d minutes"</string>
    <string name="copy_dialog_title">Copy Times</string>
    <string name="copy_label">Copy</string>
    <string name="set_interval_title">Interval Time</string>
    <string name="set_interval_message">Select interval time in minutes</string>
    <string name="set_interval_confirm">Add</string>
    <string name="location_rationale">Interval Trainer requires location tracking to function. Please enable Location permissions</string>
    <string name="location_rationale_positive">Settings</string>
    <string name="mph">%1$.2f mph</string>
    <string name="miles">%1$.2f miles</string>
    <string name="minutes">%1$.2f minutes</string>
    <string name="select_a_session">Please select a session to continue.</string>
    <string name="edit_desc">Edit</string>
    <string name="expand_desc">Expand session times</string>
    <string name="collapse_session_desc">Collapse session times</string>
    <string name="widget_title">Last Session:</string>
    <string name="no_records">No Records</string>
    <string name="empty_sets">You have no training sets added. Please use the add button below to get started.</string>
    <string name="session_times">Session Times</string>

    <string name="about_license_label">This Application was developed by Theodore Doll licensed under the apache 2.0 license.</string>
    <string name="license_button_label">License</string>
    <string name="credits_label">Credits:</string>

    <string name="title_activity_about">About</string>
    <string name="version">Version: %s</string>
    <string name="timber_title">Timber</string>
    <string name="timber_dev">JakeWharton</string>
    <string name="timber_desc">A logger with a small, extensible API which provides utility on top of Android\'s normal Log class.</string>
    <string name="timber_link">http://jakewharton.github.io/timber/</string>
</resources>
