<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_centerInParent="true"
        style="?android:attr/textAppearanceLarge"
        android:text="@string/select_a_session"/>
    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/list_header"
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <TextView
                    style="?android:attr/textAppearanceListItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/session_times" />

                <ImageView
                    android:contentDescription="@string/expand_desc"
                    android:id="@+id/expand_list"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_expand_less_black_24dp" />

                <ImageView
                    android:contentDescription="@string/collapse_session_desc"
                    android:id="@+id/collapse_list"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_expand_more_black_24dp"
                    android:visibility="gone" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="@color/divider" />

            <com.teddoll.fitness.intervaltrainer.widget.MaxHeightListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/divider"
                android:dividerHeight="1dp"
                android:listSelector="@android:color/transparent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingRight="4dp"
                android:paddingEnd="4dp"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>